--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+<head> 
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9353048198801946"
+     crossorigin="anonymous"></script>
+
+  
 
 <link href="https://vjs.zencdn.net/8.6.1/video-js.css" rel="stylesheet" />
 
